--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>SS APP</title>
   </head>
-  <body style="height:100%;margin:0;padding:0">
+  <body style="height:100%;margin:0;padding:0;font-size: 20px;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
